tests/sumo/errors/invalid_float/errors.sumo
Error: While processing option 'device.rerouting.probability':
 'invalidInput' is not a valid float.
Error: Could not parse commandline options.
Quitting (on error).
